--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mybrary</title>
+  <title>Book-Library</title>
 </head>
 <body>
-  Before 
+
+  <%- include('../partials/headers.ejs') %>
+  <%- include('../partials/errorMessage.ejs') %>
   <br>
   <%- body %>
   <br>
-  After
+ 
 </body>
 </html>
