--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -2,8 +2,11 @@
   <nav>
     <a href="/">Book-Library</a>
     <ul>
+      <a href="/books">Books</a>
+      <a href="/books/new">Add Book</a>
       <a href="/authors">Authors</a>
       <a href="/authors/new">Add Author</a>
+   
     </ul>
   </nav>
 </header>
