client side requests made

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,6 +11,7 @@
 
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/js/fileUploads.js"></script>
+  <script defer src="/js/app.js"></script>
   <title>Book-Library</title>
 </head>
 <body>
