--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -8,4 +8,6 @@
 <br>
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
+    <button id="delete-btn" data-id=<%= author.id %>>Delete</button>
 <% });  %>
+
