--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -9,6 +9,7 @@
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
     <a href="/authors/<%= author.id %>" id="view-btn" data-id=<%= author.id %>>View</a>
+    <a href="/authors/<%= author.id %>/edit" id="edit-btn" data-id=<%= author.id %>>Edit</a>
     <form  method="POST" action="/authors/<%= author.id %>?_method=DELETE">
       <button type="submit" id="delete-btn" data-id=<%= author.id %>>Delete</button>
     </form>
