--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -24,6 +24,7 @@
 
 <div>
   <% books.forEach(book => { %>
+      <a href="/books/<%= book.id %>">View Book</a>
       <img height="150" width="100" src="<%= book.coverImagePath %>" alt="">
   <% });  %>
 </div>
