--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <br>
 <div>
   <% books.forEach(book => { %>
+    <a href="/books/<%= book.id %>">View Book</a>
       <img height="150" width="100" src="<%= book.coverImagePath %>" alt="">
   <% });  %>
 </div>
