--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -1,12 +1,10 @@
-<header>
-  <nav>
-    <a href="/">Book-Library</a>
+
+
+    <a href="/" id="nav-title">Bookify</a>
     <ul>
-      <a href="/books">Books</a>
-      <a href="/books/new">Add Book</a>
-      <a href="/authors">Authors</a>
-      <a href="/authors/new">Add Author</a>
-   
+      <li class="nav-links">   <a href="/books">Books</a></li>
+      <li class="nav-links"><a href="/books/new">Add Book</a></li>
+      <li class="nav-links"> <a href="/authors">Authors</a></li>
+      <li class="nav-links">      <a href="/authors/new">Add Author</a></li>
+  
     </ul>
-  </nav>
-</header>
