--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,30 +1,38 @@
-<h2>Search Books</h2>
+<div class="container">
+  <h2>Search Books</h2>
 
 <form action="/books" method="GET">
 
-<div>
+<div class="form-group">
   <label>Title</label>
   <input type="text" name="title" value="<%= searchOptions.title %>">
 </div>
 
-</div>
+<div class="form-group">
   <label>Published After</label>
   <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
-<div>
+</div>
 
-<div>
+<div class="form-group">
   <label>Published Before</label>
   <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">  
 </div>
 
-  <button type="submit">Search</button>
+  <button class="btn" type="submit">Search</button>
 
 </form>
-<br>
 
-<div>
+
+<div class="book-gallery">
   <% books.forEach(book => { %>
-      <a href="/books/<%= book.id %>">View Book</a>
-      <img height="150" width="100" src="<%= book.coverImagePath %>" alt="">
+
+    <div class="book">
+      <a href="/books/<%= book.id %>">
+        <img src="<%= book.coverImagePath %>" alt="">
+      </a>
+    </div>
+   
   <% });  %>
+</div>
+
 </div>
