--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
     <div class="showcase-content">
       <h1 class="primary-text">Spotify for Books</h1>
-      <p class="secondary-text">An online library to arrange your books</p>
+      <p class="secondary-text">An online library to manage your books</p>
 
     </div>
   </div>
