--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -1,6 +1,8 @@
 
 
-    <a href="/" id="nav-title">Bookify</a>
+    <a href="/" id="nav-title">
+      <!-- <img  class="logo" src="/img/b6288674db954e706bc3b210bb1ab749.jpg" alt=""> -->
+      Bookify</a>
     <ul>
       <li class="nav-links">   <a href="/books">Books</a></li>
       <li class="nav-links"><a href="/books/new">Add Book</a></li>
