--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,11 @@ a {
 	--primary-bg-color: #cc0066;
 	--showcase-bg-color: #ea728c;
 	--dark-colour: #333;
+	--book-width: 200px;
+	--book-width-large: 325px;
+	--btn-primary-color: #d9455f;
+	--btn-secondary-color: #ff6b6b;
+	--form-color: #82ccdd;
 }
 /* Utility Classes */
 
@@ -72,6 +77,30 @@ a {
 	padding: 2rem;
 }
 
+.btn-group {
+	margin: 1.5rem;
+}
+.btn {
+	display: inline-block;
+	border: none;
+	line-height: 1.2;
+	border-radius: 5px;
+	padding: 0.8rem;
+	cursor: pointer;
+	font-size: 1.5rem;
+	width: 20%;
+	text-align: center;
+	/* margin: 0 1rem; */
+	margin-right: 1rem;
+	transition: all 0.4s ease;
+}
+.btn:hover {
+	background: #ff6b6b;
+}
+.btn-primary {
+	background: var(--btn-primary-color);
+	color: #fff;
+}
 /* Navbar */
 
 #main-nav {
@@ -151,8 +180,83 @@ a {
 	margin-bottom: 4rem;
 }
 .book-gallery a img {
+	width: var(--book-width-large);
+	height: calc(var(--book-width-large)/0.75);
+}
+.book-gallery a img {
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	transition: all 0.3s ease;
+}
+
+.book-gallery a img:hover {
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.book {
+	margin: 0 auto;
+}
+
+/* Forms */
+.main-form {
 	width: 100%;
-	height: 100%;
+	/* background: #40bad5;
+	 */
+	background: var(--form-color);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem 0;
+	border-radius: 5px;
+	box-shadow: 1px solid;
+	margin: 0 auto;
+	margin-bottom: 3rem;
+}
+.main-form .btn-group {
+	margin: 1.5rem;
+	width: 80%;
+	display: flex;
+}
+.form-group {
+	margin: 1.5rem;
+	width: 80%;
+}
+.form-group label {
+	display: block;
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
+}
+
+.form-group input,
+.form-group textarea,
+.form-group select {
+	resize: none;
+	width: 50%;
+	height: 2rem;
+	padding: 1rem;
+	font-size: 1.2rem;
+}
+.form-group select {
+	outline: 1px solid;
+}
+.form-group textarea {
+	height: 5rem;
+}
+.form-group input,
+.form-group textarea {
+	border: 2px solid;
+	border-color: #333;
+	border-radius: 5px;
+}
+
+/* Filepond basic  */
+.filepond--root {
+	margin-bottom: 0;
+	max-width: 18rem;
+	min-height: 25rem;
+}
+.filepond--drop-label {
+	padding: 1rem;
+	font-size: inherit;
 }
 
 /* Footer */
