--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,4 @@
-<label>Name</label>
+<div class="form-group">
+  <label>Name</label>
 <input type="text" name="name" value="<%= author.name %>">
+</div>
