--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,17 @@
-<h2>New Author</h2>
-<form action="/authors" method="POST">
+<div class="container">
 
-  <%- include('_form_fields') %>
-  <a href="/authors">Cancel</a>
-  <button type="submit">Create</button>
-</form>
+  <h2 class="secondary-text p-2">New Author</h2>
+  <form action="/authors" method="POST">
+  
+    <div class="main-form">
+
+      <%- include('_form_fields') %>
+
+      <div class="btn-group">
+        <a class="btn btn-primary" href="/authors">Cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+
+      </div>
+    </div>
+  </form>
+</div>
