--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,40 +1,42 @@
-<div>
-  <label>Title</label>
-  <input type="text" name="title" value="<%= book.title %>">
 
-</div>
-
-<div>
-  <label>Author</label>
-  <select name="author">
-  <% authors.forEach(author => { %>
+  <div class="form-group">
+    <label>Title</label>
+    <input type="text" name="title" value="<%= book.title %>">
   
-    <% if(author.id === book.author){ %>
-      <option selected label="<%= author.name %>" value="<%= author.id %>">
-    <% } else { %>
-      <option label="<%= author.name %>" value="<%= author.id %>">
-    <% } %>
-  <% }) %>
-  </select>
+  </div>
+  
+  <div class="form-group">
+    <label>Author</label>
+    <select name="author">
+    <% authors.forEach(author => { %>
+    
+      <% if(author.id === book.author){ %>
+        <option selected label="<%= author.name %>" value="<%= author.id %>">
+      <% } else { %>
+        <option label="<%= author.name %>" value="<%= author.id %>">
+      <% } %>
+    <% }) %>
+    </select>
+  
+  </div>
+  <div class="form-group">
+    <label>Publish Date</label>
+    <input type="date" name="publishDate" value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+  
+  </div>
+  
+  <div class="form-group">
+    <label>Page Count</label>
+    <input type="number"  name="pageCount" min="1" value="<%= book.pageCount %>">
+  </div>
+  
+  <div class="form-group">
+    <label>Cover</label>
+    <input type="file" name="cover" class="book-cover filepond">
+  </div>
+  
+  <div class="form-group">
+    <label>Description</label>
+    <textarea name="description"><%= book.description %></textarea>
+  </div>
 
-</div>
-<div>
-  <label>Publish Date</label>
-  <input type="date" name="publishDate" value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
-
-</div>
-
-<div>
-  <label>Page Count</label>
-  <input type="number"  name="pageCount" min="1" value="<%= book.pageCount %>">
-</div>
-
-<div>
-  <label>Cover</label>
-  <input type="file" name="cover" class="filepond">
-</div>
-
-<div>
-  <label>Description</label>
-  <textarea name="description"><%= book.description %></textarea>
-</div>
