--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,24 +1,30 @@
 <div class="container">
-  <h2>Search Books</h2>
+  <h2 class="secondary-text p-2">Search your Books!</h2>
 
 <form action="/books" method="GET">
 
-<div class="form-group">
-  <label>Title</label>
-  <input type="text" name="title" value="<%= searchOptions.title %>">
-</div>
+  <div class="main-form">
+    <div class="form-group">
+      <label>Title</label>
+      <input type="text" name="title" value="<%= searchOptions.title %>">
+    </div>
+    
+    <div class="form-group">
+      <label>Published After</label>
+      <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
+    </div>
+    
+    <div class="form-group">
+      <label>Published Before</label>
+      <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">  
+    </div>
+    
+    <div class="btn-group">
+      <button class="btn btn-primary" type="submit">Search</button>
+    </div>
 
-<div class="form-group">
-  <label>Published After</label>
-  <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
-</div>
-
-<div class="form-group">
-  <label>Published Before</label>
-  <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">  
-</div>
-
-  <button class="btn" type="submit">Search</button>
+    
+  </div>
 
 </form>
 
