--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,7 +1,16 @@
-<h2>New Book</h2>
-<form action="/books" method="POST">
+<div class="container">
+  <h2 class="secondary-text p-2">New Book</h2>
+  <form action="/books" method="POST">
+  
+    <div class="main-form">
+      <%- include('_form_fields') %>
+    
+      <div class="btn-group">
+        <a href="/books" class="btn btn-primary">Cancel</a>
+        <button type="submit" class="btn btn-primary">Create</button>
+      </div>
 
-  <%- include('_form_fields') %>
-  <a href="/books">Cancel</a>
-  <button type="submit">Create</button>
-</form>
+    </div>
+
+  </form>
+</div>
