--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -7,7 +7,7 @@
     
       <div class="btn-group">
         <a href="/books" class="btn btn-primary">Cancel</a>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-dark">Create</button>
       </div>
 
     </div>
