--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,7 +14,9 @@
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/js/fileUploads.js"></script>
 
-  <title>Book-Library</title>
+  <script src="https://kit.fontawesome.com/e4d5e98a9c.js" crossorigin="anonymous"></script>
+
+  <title>Bookify | Online Book Library</title>
 </head>
 <body>
 
