--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,7 @@ a {
 	--btn-primary-color: #d9455f;
 	--btn-secondary-color: #ff6b6b;
 	--form-color: #82ccdd;
+	--card-color: #e3f6f5;
 }
 /* Utility Classes */
 
@@ -79,6 +80,8 @@ a {
 
 .btn-group {
 	margin: 1.5rem;
+	display: flex;
+	width: 80%;
 }
 .btn {
 	display: inline-block;
@@ -92,17 +95,29 @@ a {
 	text-align: center;
 	/* margin: 0 1rem; */
 	margin-right: 1rem;
+	margin-bottom: 1rem;
 	transition: all 0.4s ease;
 }
-.btn:hover {
-	background: #ff6b6b;
-}
+
 .btn-primary {
 	background: var(--btn-primary-color);
 	color: #fff;
 }
-/* Navbar */
+.btn-primary:hover {
+	background: #ff6b6b;
+}
+.btn-dark {
+	background: var(--dark-colour);
+	color: #fff;
+}
+.btn-dark:hover {
+	background: #444;
+}
 
+/* Navbar */
+#logo {
+	color: #000;
+}
 #main-nav {
 	position: sticky;
 	top: 0;
@@ -171,7 +186,7 @@ a {
 /* Book Gallery */
 
 .book-gallery {
-	padding: 1rem;
+	padding: 2rem;
 	height: 100%;
 	background: #f4f4f4;
 	display: grid;
@@ -195,6 +210,98 @@ a {
 	margin: 0 auto;
 }
 
+/* Author Gallery */
+
+#author-gallery {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 1rem;
+	margin-bottom: 4rem;
+}
+#author-gallery .author-card {
+	background: var(--card-color);
+	border-radius: 5px;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+#author-gallery .author-card .btn-group .btn {
+	width: 100%;
+	margin-bottom: 1rem;
+}
+
+/* Author Details Page */
+
+form {
+	width: 100%;
+}
+
+#show-author-form {
+	margin-top: 6rem;
+}
+#show-author-form .secondary-text {
+	display: flex;
+	width: 80%;
+	margin: 1.5rem;
+}
+
+/* Book Details Page */
+
+form {
+	flex: 1;
+	margin-right: 1rem;
+}
+#book-details-card {
+	background: var(--card-color);
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem;
+	margin-top: 6rem;
+}
+#book-details-card .btn-group #delete-btn {
+	width: 100%;
+}
+#book-details-card .btn-group .btn-primary {
+	flex: 1;
+	margin-right: 1rem;
+}
+.book-content {
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.book-content .book-info {
+	font-size: 2rem;
+	background: #ecfcff;
+	padding: 1rem;
+	border-radius: 5px;
+}
+.book-content .book-cover-image {
+	width: var(--book-width);
+	height: calc(var(--book-width)/0.75);
+}
+
+/* Error Messages */
+#no-book-message,
+#no-author-message {
+	margin-top: 6rem;
+	text-align: center;
+}
+#no-book-message-landing-page {
+	margin-top: 4rem;
+	text-align: center;
+}
+#no-book-message-landing-page .btn-group {
+	justify-content: center;
+	align-items: center;
+}
+
 /* Forms */
 .main-form {
 	width: 100%;
@@ -211,11 +318,7 @@ a {
 	margin: 0 auto;
 	margin-bottom: 3rem;
 }
-.main-form .btn-group {
-	margin: 1.5rem;
-	width: 80%;
-	display: flex;
-}
+
 .form-group {
 	margin: 1.5rem;
 	width: 80%;
@@ -227,8 +330,7 @@ a {
 }
 
 .form-group input,
-.form-group textarea,
-.form-group select {
+.form-group textarea {
 	resize: none;
 	width: 50%;
 	height: 2rem;
@@ -236,7 +338,15 @@ a {
 	font-size: 1.2rem;
 }
 .form-group select {
+	width: 50%;
+	height: 2rem;
+	font-size: 1.2rem;
+	resize: none;
 	outline: 1px solid;
+	background: #fff;
+}
+.form-group select option {
+	color: #000;
 }
 .form-group textarea {
 	height: 5rem;
