--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,7 +1,20 @@
-<h2>Edit Author</h2>
-<form action="/authors/<%= author.id %>?_method=PUT" method="POST">
 
-  <%- include('_form_fields') %>
-  <a href="/authors/<%= author.id %>">Cancel</a>
-  <button type="submit">Update</button>
-</form>
+<div class="container">
+  
+  <h2 class="secondary-text p-2">Edit Author</h2>
+  <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
+    
+    <div class="main-form">
+
+      <%- include('_form_fields') %>
+  
+      <div class="btn-group">
+        <a class="btn btn-primary" href="/authors/<%= author.id %>">Cancel</a>
+        <button class="btn btn-dark" type="submit">Update</button>
+      </div>
+
+    </div>
+
+  </form>
+
+</div>
