--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -9,7 +9,7 @@
 
       <div class="btn-group">
         <a class="btn btn-primary" href="/authors">Cancel</a>
-        <button class="btn btn-primary" type="submit">Create</button>
+        <button class="btn btn-dark" type="submit">Create</button>
 
       </div>
     </div>
