--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,24 +1,47 @@
-<h2><%= book.title %></h2>
+<div class="container">
 
-<img width = "100" height="150" src="<%= book.coverImagePath %>" alt="">
+  <div id="book-details-card">
 
-<div>
-  Author : <%= book.author.name %>
+    <h2 class="secondary-text p-2"><%= book.title %></h2>
+
+    <div class="book-content">
+  
+      <div class="book-cover-image-box">
+      
+        <img class="book-cover-image" src="<%= book.coverImagePath %>" alt="">
+      
+      </div>
+      
+      <div class="book-info">
+        <div>
+          Author : <%= book.author.name %>
+        </div>
+        <div>
+          Publish Date : <%= book.publishDate.toDateString() %>
+        </div>
+        <div>
+          Page Count : <%= book.pageCount %>
+        </div>
+        
+        <div>
+          Description : <%= book.description %>
+        </div>
+      
+      </div>
+    </div>
+  
+  <div class="btn-group">
+  
+    <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit</a>
+    
+    <form  method="POST" action="/books/<%= book.id %>?_method=DELETE">
+      <button class="btn btn-primary" type="submit" id="delete-btn" data-id=<%= book.id %>>Delete</button>
+    </form>
+    
+    <a class="btn btn-primary" href="/authors/<%= book.author.id %>">View Author</a>
+  
+  </div>
+
+  </div>
+
 </div>
-<div>
-  Publish Date : <%= book.publishDate.toDateString() %>
-</div>
-<div>
-  Page Count : <%= book.pageCount %>
-</div>
-
-<div>
-  Description : <%= book.description %>
-</div>
-
-<a href="/books/<%= book.id %>/edit">Edit</a>
-<form  method="POST" action="/books/<%= book.id %>?_method=DELETE">
-  <button type="submit" id="delete-btn" data-id=<%= book.id %>>Delete</button>
-</form>
-
-<a href="/authors/<%= book.author.id %>">View Author</a>
