--- a/views/partials/headers.ejs
+++ b/views/partials/headers.ejs
@@ -1,7 +1,7 @@
 
 
     <a href="/" id="nav-title">
-      <!-- <img  class="logo" src="/img/b6288674db954e706bc3b210bb1ab749.jpg" alt=""> -->
+      <i class="fas fa-book-open" id="logo"></i>
       Bookify</a>
     <ul>
       <li class="nav-links">   <a href="/books">Books</a></li>
