--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,8 @@
 <% if(locals.errorMessage != null) { %>
-  <%= errorMessage %>
+
+  <div class="container">
+    
+    <div class="error-message"><%= errorMessage %></div>
+
+  </div>
  <% } %>
